branches/wip/Archive/5f41290568453395f74975ee4a82bfaf-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In lambda function:
main.cpp:10:11: error: '...' handler must be the last handler for its try block [-fpermissive]
         } catch (...) {
           ^
